# dn-cdc-lvgvm-hal-video-impl-qc

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md
cmake/: common.cmake  (+1 more)
stub/: CMakeLists.txt
stub/ccm/: CMakeLists.txt  MiscConfig.h  ccm_api.c
stub/common/: CMakeLists.txt  audio_stub_cmn_cmndef_protected.h  stub_common.cpp  stub_common.h
stub/drm/: CMakeLists.txt  xf86drm.c
stub/gbm_lib/: CMakeLists.txt  gbm_stub.c
stub/gst-launch/: CMakeLists.txt  gst_launch.c
stub/hal/: CMakeLists.txt  hal_api.c  hal_gpio_public.h  hal_public.h
stub/ls3ctl/api/: CMakeLists.txt
stub/ls3ctl/api/include/: ls3_ctl_api_public.h  ls3_ctl_local.h
stub/ls3ctl/api/src/: ls3ctl_api.c
stub/pfm_lib/: CMakeLists.txt  pfm_core.c
stub/qcarcam/: CMakeLists.txt  qcarcam.h  qcarcam_metadata.h  qcarcam_stub_api.cpp  qcarcam_types.h  sensorsdk.h  vendor_ext_properties.h  vendor_ext_properties_stub.h
stub/qcarcam/qcxosal/: CMakeLists.txt  qcxosal.cpp
stub/wayland_renderer/: CMakeLists.txt
stub/wayland_renderer/inc/: wl_renderer.h  wl_renderer_compliant.h  wl_renderer_config.h  wl_renderer_define.h  wl_renderer_log.h  wl_renderer_video.h  wl_renderer_video_buffer.h
stub/wayland_renderer/include/: wl_renderer_public.h
stub/wayland_renderer/src/: wl_renderer.cpp  wl_renderer_config.cpp  wl_renderer_log.cpp  wl_renderer_video.cpp  wl_renderer_video_buffer.cpp
test/: CMakeLists.txt
test/qcarcam_seq/: CMakeLists.txt  qcarcam_seq.cpp  qcarcam_seq.h  qcarcam_seq_main.cpp
test/render_image/: CMakeLists.txt  readme.txt
test/render_image/img/: sample_nv12_1440x1088.yuv  sample_uyvy_1280x720.uyvy
test/render_image/src/: render_image.cpp
test/stub/: CMakeLists.txt
test/stub/test_ccm/: CMakeLists.txt  test_ccm_01.cpp  test_ccm_02.cpp  test_main.cpp
test/stub/test_drm/: CMakeLists.txt  test_drm_01.cpp  test_main.cpp  test_main.h
test/stub/test_hal/: CMakeLists.txt  test_hal_01.cpp  test_main.cpp
test/stub/test_ls3ctl/: CMakeLists.txt  test_ls3ctl_01.cpp  test_main.cpp
test/stub/test_qcarcam/: CMakeLists.txt
test/stub/test_qcarcam/src/: qcarcam_test.cpp
test/test_driver/: CMakeLists.txt
test/test_driver/client/: CMakeLists.txt  halcp_video_client.c
test/test_driver/driver/: CMakeLists.txt
test/test_driver/driver/inc/: halcp_public.h  test_util.h  test_worker_thread.h  vhal_log.h  video_hal_ct_common.h
test/test_driver/driver/src/: halcp_lib.cpp  test_main.cpp  test_util.cpp  video_hal_test_01_video_hal_api.cpp  video_hal_test_02_layer_configuration.cpp  video_hal_test_03_front_vpath.cpp  video_hal_test_04_hdmi.cpp  video_hal_test_05_vsrc_and_color_management.cpp  video_hal_test_06_camera.cpp  video_hal_test_07_illumination.cpp  video_hal_test_08_rear_vpath.cpp  video_hal_test_09_combination.cpp  video_hal_test_10_setting.cpp  video_hal_test_11_movie_play.cpp  video_hal_test_12_ivi_property.cpp  video_hal_test_13_ivi_order.cpp  video_hal_test_14_ivi_screen_capture.cpp  video_hal_test_15_instrument_cluster.cpp  video_hal_test_16_mute.cpp  video_hal_test_17_img_adj.cpp
test/test_driver/script/: CMakeLists.txt  run-target_cert_hal_video_hal.sh
test/video_hal_tp/: CMakeLists.txt
test/video_hal_tp/inc/: vhal_test_common.h
test/video_hal_tp/script/: run-target-video_hal_tp.sh
test/video_hal_tp/src/api/: vhal_api_test_capture.cpp  vhal_api_test_hdcp.cpp  vhal_api_test_heacon_front_output.cpp  vhal_api_test_ivi_layer.cpp  vhal_api_test_ivi_property.cpp  vhal_api_test_layer_configuration.cpp  vhal_api_test_libvideo_hal.cpp  vhal_api_test_movie.cpp  vhal_api_test_mute.cpp  vhal_api_test_opacity.cpp  vhal_api_test_setting.cpp  vhal_api_test_video_adjustment.cpp  vhal_api_test_video_source_id.cpp  vhal_api_test_visible.cpp  vhal_api_test_vpath_camera.cpp  vhal_api_test_vpath_camera_output.cpp  vhal_api_test_vpath_front.cpp  vhal_api_test_vpath_front_clipping.cpp  vhal_api_test_vpath_front_output.cpp  vhal_api_test_vpath_ic.cpp  vhal_api_test_vpath_ic_clipping.cpp  vhal_api_test_vpath_ic_output.cpp  vhal_api_test_vpath_rear.cpp  vhal_api_test_vpath_rear_output.cpp  vhal_api_test_vpath_rse.cpp  vhal_api_test_wide_mode.cpp
test/video_hal_tp/src/common/: vhal_test_common.cpp  vhal_test_main.cpp
test/video_hal_tp/src/env/: vhal_env_test_setting.cpp  vhal_env_test_vpath_camera.cpp  vhal_env_test_vpath_front.cpp  vhal_env_test_vpath_ic.cpp  vhal_env_test_vpath_rear.cpp
test/video_hal_tp/src/etc/: vhal_function_test.cpp
test/video_hal_tp/src/seq/: vhal_seq_test_capture.cpp  vhal_seq_test_hdcp.cpp  vhal_seq_test_heacon_front_output.cpp  vhal_seq_test_ivi_layer.cpp  vhal_seq_test_ivi_property.cpp  vhal_seq_test_layer_configuration.cpp  vhal_seq_test_libvideo_hal.cpp  vhal_seq_test_movie.cpp  vhal_seq_test_mute.cpp  vhal_seq_test_opacity.cpp  vhal_seq_test_setting.cpp  vhal_seq_test_video_adjustment.cpp  vhal_seq_test_video_source_id.cpp  vhal_seq_test_visible.cpp  vhal_seq_test_vpath_camera.cpp  vhal_seq_test_vpath_camera_output.cpp  vhal_seq_test_vpath_front.cpp  vhal_seq_test_vpath_front_clipping.cpp  vhal_seq_test_vpath_front_output.cpp  vhal_seq_test_vpath_ic.cpp  vhal_seq_test_vpath_ic_clipping.cpp  vhal_seq_test_vpath_ic_output.cpp  vhal_seq_test_vpath_rear.cpp  vhal_seq_test_vpath_rear_output.cpp  vhal_seq_test_vpath_rse.cpp  vhal_seq_test_wide_mode.cpp
video_hal/server/: CMakeLists.txt
video_hal/server/inc/capture/: vhal_capture_camera.h  vhal_capture_control.h  vhal_capture_hdmi.h  vhal_capture_micon_control.h  vhal_event_item_capture_reset.h
video_hal/server/inc/color/: vhal_color_adjust_item_quality.h  vhal_color_db.h  vhal_color_mng.h  vhal_color_record.h  vhal_color_record_daynight.h  vhal_color_record_theme.h  vhal_color_recv_item_quality.h  vhal_color_send_item_quality.h
video_hal/server/inc/db/: vhal_backup_control.h  vhal_fileobserver_control.h  vhal_fileobserver_receive_event_item.h  vhal_sysdb_control.h  vhal_sysdb_event_item.h
video_hal/server/inc/device/: vhal_environment_mng.h  vhal_gpio_control.h
video_hal/server/manifest/: tier1_video_hal_manifest.xml
video_hal_control/: CMakeLists.txt
video_hal_control/src/: vhal_control.cpp
(+116 files in other folders)
